--- a/index.html
+++ b/index.html
@@ -46,10 +46,13 @@
 
           <ul>
             <li>
-                <strong>[2022.06]</strong>: One paper got accepted to ACM International Conference on Multimedia (ACM MM) 2022!
+              <strong>[2022.07]</strong>: <i>NUS Sound and Music Computing Lab</i> has survived from a server attack and has a <a href="https://smcnus.github.io">brand new lab website</a> now!
+          </li>
+            <li>
+                <strong>[2022.06]</strong>: One paper got accepted to ACM International Conference on Multimedia (<i>ACM MM</i>) 2022!
             </li>
             <li>
-              <strong>[2022.05]</strong>: One paper got accepted to IEEE Transactions on Image Processing (TIP), 2022!
+              <strong>[2022.05]</strong>: One paper got accepted to IEEE Transactions on Image Processing (<i>TIP</i>), 2022!
           </li>
           <li>
             <strong>[2021.08]</strong>: I started my Ph.D. Journey at National University of Singapore!
@@ -90,8 +93,8 @@
                 <br>
                 paper /
                 bibtex /
-                project page /
-                code
+                <a href="https://n20em.github.io">project page</a> /
+                <a href="https://github.com/guxm2021/MM-ALT">code</a>
                 <p></p>
                 <p>We proposed a MultiModal Automatic Lyric Transcription System accepting audio, video and IMU modalities and also curated the N20EM dataset.</p>
               </td>
