--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <br>
                 ACM International Conference on Multimedia (<em>ACM MM</em>), 2022. 
                 <br>
-                paper /
+                <a href="pdf/ACMMM2022.pdf">paper /
                 bibtex /
                 <a href="https://n20em.github.io">project page</a> /
                 <a href="https://github.com/guxm2021/MM-ALT">code</a>
@@ -182,7 +182,7 @@
                     <br>
                     <em>Technical Report</em>, 2022.
                     <br>
-                    <a href="https://arxiv.org/pdf/2205.02670.pdf">paper</a> /
+                    <a href="pdf/Arxiv2022.pdf">paper</a> /
                   <a href="data/wei2022unsupervised.bib">bibtex</a>		
                     <p></p>
                     <p>We developed an unsupervised learning algorithm that can infer the relationship between content-mismatched cross-modal sequential data, especially for speech-text sequences.</p>
@@ -204,7 +204,7 @@
                   <br>
                   <em>Technical Report</em>, 2020.
                   <br>
-                  <a href="https://arxiv.org/pdf/2010.04974.pdf">paper</a> /
+                  <a href="pdf/Arxiv2020.pdf">paper</a> /
                   <a href="data/gu2020distilling.bib">bibtex</a>		
                   <p></p>
                   <p>We distilled knowledge from deep learning models into explainable TSK-type Fussy Inference systems.</p>
