--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 
           <ul>
             <li>
+              <strong>[2022.07]</strong>: One paper got accepted to International Society for Music Information Retrieval Conference(<i>ISMIR</i>) 2022!
+          </li>
+            <li>
               <strong>[2022.07]</strong>: <i>NUS Sound and Music Computing Lab</i> has survived from a server attack and has a <a href="https://smcnus.github.io">brand new lab website</a> now!
           </li>
             <li>
@@ -74,6 +77,29 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/ismir2022.png" width="160" height="160">
+            </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <!-- <a href="https://ieeexplore.ieee.org/document/9798770"> -->
+                  <papertitle>Towards Transfer Learning of wav2vec 2.0 for Automatic Lyric Transcription</papertitle>
+                <!-- </a> -->
+                <br>
+                <a href="https://www.linkedin.com/in/longshen-ou/">Longshen Ou</a>*,
+                <strong>Xiangming Gu</strong>*,
+                <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
+                <br>
+                International Society for Music Information Retrieval Conference (<em>ISMIR</em>), 2022. 
+                <br>
+                paper /
+                bibtex /
+                code
+                <p></p>
+                <p>We proposed a transfer-learning-based Automatic Lyric Transcription solution and achieve state-of-the-art performances on benchmark datasets.</p>
+              </td>
+            </tr>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -91,7 +117,7 @@
                 <br>
                 ACM International Conference on Multimedia (<em>ACM MM</em>), 2022. 
                 <br>
-                <a href="pdf/ACMMM2022.pdf">paper /
+                <a href="pdf/ACMMM2022.pdf">paper</a> /
                 bibtex /
                 <a href="https://n20em.github.io">project page</a> /
                 <a href="https://github.com/guxm2021/MM-ALT">code</a>
