--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
           <ul>
             <li>
-              <strong>[2022.07]</strong>: One paper got accepted to International Society for Music Information Retrieval Conference(<i>ISMIR</i>) 2022!
+              <strong>[2022.07]</strong>: One paper got accepted to International Society for Music Information Retrieval Conference (<i>ISMIR</i>) 2022!
           </li>
             <li>
               <strong>[2022.07]</strong>: <i>NUS Sound and Music Computing Lab</i> has survived from a server attack and has a <a href="https://smcnus.github.io">brand new lab website</a> now!
@@ -97,7 +97,7 @@
                 bibtex /
                 code
                 <p></p>
-                <p>We proposed a transfer-learning-based Automatic Lyric Transcription solution and achieve state-of-the-art performances on benchmark datasets.</p>
+                <p>We proposed a transfer-learning-based Automatic Lyric Transcription solution and achieved state-of-the-art performances on benchmark datasets.</p>
               </td>
             </tr>
 
