--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <a href="https://www.linkedin.com/in/danielle-ong-854b88177/">Danielle Ong</a>,
                 <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
                 <br>
-                ACM International Conference on Multimedia (<em>ACM MM</em>), 2022. 
+                ACM International Conference on Multimedia (<em>ACM MM</em>), 2022. (<font color="red"><i>Oral</i></font>)
                 <br>
                 <a href="pdf/ACMMM2022.pdf">paper</a> /
                 bibtex /
@@ -141,7 +141,7 @@
                 <a href="https://scholar.google.com/citations?user=32hwVLEAAAAJ&hl=en">Huimin Ma</a>,
                 <a href="http://web.ee.tsinghua.edu.cn/mahongbing/en/index.htm">Hongbing Ma</a>,
                 <br>
-                 IEEE Transactions on Image Processing (<em>TIP</em>), 2022. 
+                 IEEE Transactions on Image Processing (<em>TIP</em>), 2022. (<font color="red"><i>Impact factor: 11.041</i></font>)
                 <br>
                 <a href="https://ieeexplore.ieee.org/document/9798770">paper</a> /
                 <a href="data/xue2022boost.bib">bibtex</a>		
@@ -166,7 +166,7 @@
               <br>
                IEEE/RSJ International Conference on Intelligent Robots and Systems (<em>IROS</em>), 2021. 
                <br>
-               Also in IEEE Robotics and Automation Letter (<em>RA-L</em>), 2021
+               Also in IEEE Robotics and Automation Letter (<em>RA-L</em>), 2021. (<font color="red"><i>Impact factor: 4.321</i></font>)
               <br>
 							<a href="https://ieeexplore.ieee.org/abstract/document/9501981">paper</a> /
               <a href="data/zhang2021laser.bib">bibtex</a>		
