--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
               <p style="text-align:center">
                 <name>Xiangming Gu</name>
               </p>
-              <p>I am a first-year Ph.D. student at <a href="https://www.nus.edu.sg">National University of Singapore</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Wang Ye</a>.
+              <p>I am a first-year Ph.D. student from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Wang Ye</a>. I am affilated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>.
               </p>
               <p>
-                I did my undergrad in Electronic Engineering and Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. My research interests include Machine Learning, Computer Vision, Speech Recognition, etc.
+                I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. My undergraduate thesis was supervised by Prof <a href="http://jschenthu.weebly.com">Jiansheng Chen</a> and the topic is about 3D Human Pose Estimation.
+              </p>
+              <p>
+                My research interests include Machine Learning, mainly on transfer learning; Computer Vision, mainly on 3D Human Pose Estimation; Automatic Speech Recognition and Automatic Lyric Transcription, etc.
               </p>
               <p style="text-align:center">
                 <a href="mailto:xiangming@comp.nus.edu.sg">Email</a> &nbsp/&nbsp
@@ -106,9 +109,9 @@
               <img src="images/acmmm2022.png" width="160" height="160">
             </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <!-- <a href="https://ieeexplore.ieee.org/document/9798770"> -->
+                <a href="https://arxiv.org/abs/2207.06127">
                   <papertitle>MM-ALT: A Multimodal Automatic Lyric Transcription System</papertitle>
-                <!-- </a> -->
+                </a>
                 <br>
                 <strong>Xiangming Gu</strong>*,
                 <a href="https://www.linkedin.com/in/longshen-ou/">Longshen Ou</a>*,
