--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <p>I am a first-year Ph.D. student from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Wang Ye</a>. I am affilated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>.
               </p>
               <p>
-                I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. My undergraduate thesis was supervised by Prof <a href="http://jschenthu.weebly.com">Jiansheng Chen</a> and the topic is about 3D Human Pose Estimation.
+                I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. My undergraduate thesis was supervised by Prof. <a href="http://jschenthu.weebly.com">Jiansheng Chen</a> and the topic was about 3D Human Pose Estimation.
               </p>
               <p>
                 My research interests include Machine Learning, mainly on transfer learning; Computer Vision, mainly on 3D Human Pose Estimation; Automatic Speech Recognition and Automatic Lyric Transcription, etc.
