--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
               <img src="images/ismir2022.png" width="160" height="160">
             </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <!-- <a href="https://ieeexplore.ieee.org/document/9798770"> -->
+                <a href="https://arxiv.org/pdf/2207.09747.pdf">
                   <papertitle>Towards Transfer Learning of wav2vec 2.0 for Automatic Lyric Transcription</papertitle>
-                <!-- </a> -->
+                </a>
                 <br>
                 <a href="https://www.linkedin.com/in/longshen-ou/">Longshen Ou</a>*,
                 <strong>Xiangming Gu</strong>*,
@@ -96,7 +96,7 @@
                 <br>
                 International Society for Music Information Retrieval Conference (<em>ISMIR</em>), 2022. 
                 <br>
-                paper /
+                <a href="pdf/ISMIR2022.pdf">paper</a> /
                 bibtex /
                 code
                 <p></p>
