--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <br>
                 <a href="pdf/ISMIR2022.pdf">paper</a> /
                 bibtex /
-                code
+                <a href="https://github.com/guxm2021/TransferALT">code</a>
                 <p></p>
                 <p>We proposed a transfer-learning-based Automatic Lyric Transcription solution and achieved state-of-the-art performances on benchmark datasets.</p>
               </td>
@@ -147,7 +147,8 @@
                  IEEE Transactions on Image Processing (<em>TIP</em>), 2022. (<font color="red"><i>Impact factor: 11.041</i></font>)
                 <br>
                 <a href="https://ieeexplore.ieee.org/document/9798770">paper</a> /
-                <a href="data/xue2022boost.bib">bibtex</a>		
+                <a href="data/xue2022boost.bib">bibtex</a> /
+                <a href="https://github.com/thuxyz19/3D-HPE-PAA">code</a>
                 <p></p>
                 <p>We proposed part aware attention mechanism which helps a transformer-based model to achieve state-of-the-art 3D pose estimation performance.</p>
               </td>
@@ -257,7 +258,8 @@
               <img src="images/nus_logo.jpg" alt="nus">
             </td>
             <td width="75%" valign="center">
-              <a href="https://github.com/xbresson/CS4243_2022">Teaching Assistant, CS4243 Spring 2022</a>
+              <a href="https://github.com/xbresson/CS4243_2022">Teaching Assistant, CS4243, Computer Vision and Pattern Recognition, Spring 2022</a>
+              <a href="https://knmnyn.github.io/cs3244-2210">Teaching Assistant, CS3244, Machine Learning, Spring 2022</a>
               <br>
             </td>
           </tr>
