--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
               <img src="images/nus_logo.jpg" alt="nus">
             </td>
             <td width="75%" valign="center">
-              <a href="https://github.com/xbresson/CS4243_2022">Teaching Assistant, CS4243, Computer Vision and Pattern Recognition, Spring 2022</a>
-              <a href="https://knmnyn.github.io/cs3244-2210">Teaching Assistant, CS3244, Machine Learning, Spring 2022</a>
+              Teaching Assistant, <a href="https://github.com/xbresson/CS4243_2022">CS4243, Computer Vision and Pattern Recognition, Spring 2022</a>
+              Teaching Assistant, <a href="https://knmnyn.github.io/cs3244-2210">CS3244, Machine Learning, Fall 2022</a>
               <br>
             </td>
           </tr>
