--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                 International Society for Music Information Retrieval Conference (<em>ISMIR</em>), 2022. 
                 <br>
                 <a href="pdf/ISMIR2022.pdf">paper</a> /
-                bibtex /
-                <a href="https://github.com/guxm2021/TransferALT">code</a>
+                <a href="data/ou2022towards.bib">bibtex</a> /
+                <a href="https://github.com/guxm2021/ALT_SpeechBrain">code</a>
                 <p></p>
                 <p>We proposed a transfer-learning-based Automatic Lyric Transcription solution and achieved state-of-the-art performances on benchmark datasets.</p>
               </td>
@@ -121,9 +121,9 @@
                 ACM International Conference on Multimedia (<em>ACM MM</em>), 2022. (<font color="red"><i>Oral</i></font>)
                 <br>
                 <a href="pdf/ACMMM2022.pdf">paper</a> /
-                bibtex /
+                <a href="data/gu2022mm.bib">bibtex</a> /
                 <a href="https://n20em.github.io">project page</a> /
-                <a href="https://github.com/guxm2021/MM-ALT">code</a>
+                <a href="https://github.com/guxm2021/ALT_SpeechBrain">code</a>
                 <p></p>
                 <p>We proposed a MultiModal Automatic Lyric Transcription System accepting audio, video and IMU modalities and also curated the N20EM dataset.</p>
               </td>
@@ -259,7 +259,7 @@
             </td>
             <td width="75%" valign="center">
               Teaching Assistant, <a href="https://github.com/xbresson/CS4243_2022">CS4243, Computer Vision and Pattern Recognition, Spring 2022</a>
-              Teaching Assistant, <a href="https://knmnyn.github.io/cs3244-2210">CS3244, Machine Learning, Fall 2022</a>
+              <!-- Teaching Assistant, <a href="https://knmnyn.github.io/cs3244-2210">CS3244, Machine Learning, Fall 2022</a> -->
               <br>
             </td>
           </tr>
