--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             </td>
             <td width="75%" valign="center">
               Teaching Assistant, <a href="https://github.com/xbresson/CS4243_2022">CS4243, Computer Vision and Pattern Recognition, Spring 2022</a>
-              <!-- Teaching Assistant, <a href="https://knmnyn.github.io/cs3244-2210">CS3244, Machine Learning, Fall 2022</a> -->
+              Teaching Assistant, <a href="https://knmnyn.github.io/cs3244-2210">CS3244, Machine Learning, Fall 2022</a>
               <br>
             </td>
           </tr>
