--- a/index.html
+++ b/index.html
@@ -80,36 +80,13 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/ismir2022.png" width="160" height="160">
-            </td>
-              <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://arxiv.org/pdf/2207.09747.pdf">
-                  <papertitle>Towards Transfer Learning of wav2vec 2.0 for Automatic Lyric Transcription</papertitle>
-                </a>
-                <br>
-                <a href="https://www.linkedin.com/in/longshen-ou/">Longshen Ou</a>*,
-                <strong>Xiangming Gu</strong>*,
-                <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
-                <br>
-                International Society for Music Information Retrieval Conference (<em>ISMIR</em>), 2022. 
-                <br>
-                <a href="pdf/ISMIR2022.pdf">paper</a> /
-                <a href="data/ou2022towards.bib">bibtex</a> /
-                <a href="https://github.com/guxm2021/ALT_SpeechBrain">code</a>
-                <p></p>
-                <p>We proposed a transfer-learning-based Automatic Lyric Transcription solution and achieved state-of-the-art performances on benchmark datasets.</p>
-              </td>
-            </tr>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/acmmm2022.png" width="160" height="160">
             </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://arxiv.org/abs/2207.06127">
+                <a href="https://arxiv.org/pdf/2207.06127.pdf">
                   <papertitle>MM-ALT: A Multimodal Automatic Lyric Transcription System</papertitle>
                 </a>
                 <br>
@@ -120,7 +97,7 @@
                 <br>
                 ACM International Conference on Multimedia (<em>ACM MM</em>), 2022. (<font color="red"><i>Oral</i></font>)
                 <br>
-                <a href="pdf/ACMMM2022.pdf">paper</a> /
+                <a href="pdf/ACMMM2022.pdf">pdf</a> /
                 <a href="data/gu2022mm.bib">bibtex</a> /
                 <a href="https://n20em.github.io">project page</a> /
                 <a href="https://github.com/guxm2021/ALT_SpeechBrain">code</a>
@@ -128,6 +105,29 @@
                 <p>We proposed a MultiModal Automatic Lyric Transcription System accepting audio, video and IMU modalities and also curated the N20EM dataset.</p>
               </td>
             </tr>
+          
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/ismir2022.png" width="160" height="160">
+              </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://arxiv.org/pdf/2207.09747.pdf">
+                    <papertitle>Towards Transfer Learning of wav2vec 2.0 for Automatic Lyric Transcription</papertitle>
+                  </a>
+                  <br>
+                  <a href="https://www.linkedin.com/in/longshen-ou/">Longshen Ou</a>*,
+                  <strong>Xiangming Gu</strong>*,
+                  <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
+                  <br>
+                  International Society for Music Information Retrieval Conference (<em>ISMIR</em>), 2022. 
+                  <br>
+                  <a href="pdf/ISMIR2022.pdf">pdf</a> /
+                  <a href="data/ou2022towards.bib">bibtex</a> /
+                  <a href="https://github.com/guxm2021/ALT_SpeechBrain">code</a>
+                  <p></p>
+                  <p>We proposed a transfer-learning-based Automatic Lyric Transcription solution and achieved state-of-the-art performances on benchmark datasets.</p>
+                </td>
+              </tr>
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -146,7 +146,7 @@
                 <br>
                  IEEE Transactions on Image Processing (<em>TIP</em>), 2022. (<font color="red"><i>Impact factor: 11.041</i></font>)
                 <br>
-                <a href="https://ieeexplore.ieee.org/document/9798770">paper</a> /
+                <a href="https://ieeexplore.ieee.org/document/9798770">IEEE paper</a> /
                 <a href="data/xue2022boost.bib">bibtex</a> /
                 <a href="https://github.com/thuxyz19/3D-HPE-PAA">code</a>
                 <p></p>
@@ -172,7 +172,7 @@
                <br>
                Also in IEEE Robotics and Automation Letter (<em>RA-L</em>), 2021. (<font color="red"><i>Impact factor: 4.321</i></font>)
               <br>
-							<a href="https://ieeexplore.ieee.org/abstract/document/9501981">paper</a> /
+							<a href="https://ieeexplore.ieee.org/abstract/document/9501981">IEEE paper</a> /
               <a href="data/zhang2021laser.bib">bibtex</a>		
               <p></p>
               <p>We developed a layer endoscopic manipulator with a soft bendable tip for minimally invasive surgery.</p>
@@ -273,7 +273,7 @@
               <p style="text-align:right;font-size:small;">
                 You've probably seen this website template before, thanks to <a href="https://jonbarron.info">Jon Barron</a>.
                 <br>
-                Last Updated July 2022.
+                Last Updated September 2022.
               </p>
             </td>
           </tr>
