--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Xiangming Gu</name>
               </p>
-              <p>I am a first-year Ph.D. student from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Wang Ye</a>. I am affilated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>.
+              <p>I am a second-year Ph.D. student from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Wang Ye</a>. I am affilated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>.
               </p>
               <p>
                 I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. My undergraduate thesis was supervised by Prof. <a href="http://jschenthu.weebly.com">Jiansheng Chen</a> and the topic was about 3D Human Pose Estimation.
@@ -48,6 +48,9 @@
             <heading>News</heading>
 
           <ul>
+            <li>
+              <strong>[2022.09]</strong>: One paper got accepted to Conference on Neural Information Processing Systems (<i>NeurIPS</i>) 2022!
+          </li>
             <li>
               <strong>[2022.07]</strong>: One paper got accepted to International Society for Music Information Retrieval Conference (<i>ISMIR</i>) 2022!
           </li>
@@ -105,6 +108,30 @@
                 <p>We proposed a MultiModal Automatic Lyric Transcription System accepting audio, video and IMU modalities and also curated the N20EM dataset.</p>
               </td>
             </tr>
+
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/neurips2022.png" width="160" height="137">
+              </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                    <papertitle>Extrapolative Continuous-time Bayesian Neural Network for Predictive Streaming Domain Adaptation</papertitle>
+                  <br>
+                  <a href="https://scholar.google.com/citations?user=GQm1eZEAAAAJ&hl=zh-CN">Hengguan Huang</a>,
+                  <strong>Xiangming Gu</strong>,
+                  <a href="http://www.wanghao.in">Hao Wang</a>,
+                  <a href="https://smcnus.github.io">Chang Xiao</a>,
+                  <a href="https://scholar.google.com.sg/citations?hl=zh-CN&user=6xFZDEcAAAAJ">Hongfu Liu</a>,
+                  <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
+                  <br>
+                  Conference on Neural Information Processing Systems (<em>NeurIPS</em>), 2022.
+                  <br>
+                  pdf /
+                  bibtex /
+                  code
+                  <p></p>
+                  <p>We proposed to formulate predictive modeling as a continuous-time Bayesian filtering problem and extrapolative continuous-time Bayesian neural networks (ECBNN).</p>
+                </td>
+              </tr>
           
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
