--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="mailto:xiangming@comp.nus.edu.sg">Email</a> &nbsp/&nbsp
                 <a href="pdf/Resume.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=BkxEuIoAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/xiangming-gu-4734421b7/">Linkedin</a> &nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/xiangming-gu/">Linkedin</a> &nbsp/&nbsp
                 <a href="https://github.com/guxm2021">Github</a>
               </p>
             </td>
