--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
               <p>I am a second-year Ph.D. student from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Wang Ye</a>. I am affilated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>.
               </p>
               <p>
-                I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. My undergraduate thesis was supervised by Prof. <a href="http://jschenthu.weebly.com">Jiansheng Chen</a> and the topic was about 3D Human Pose Estimation.
+                I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. My undergraduate thesis was supervised by Prof. <a href="http://jschenthu.weebly.com">Jiansheng Chen</a> and the topic was about techniques and applications of 3D Human Pose Estimation in Heathcare.
               </p>
               <p>
-                My research interests include Machine Learning, mainly on transfer learning; Computer Vision, mainly on 3D Human Pose Estimation; Automatic Speech Recognition and Automatic Lyric Transcription, etc.
+                My research interests include Machine Learning, mainly on unsupervised learning and transfer learning; Computer Vision, mainly on 3D Human Pose Estimation; Music Information Retrieval, etc.
               </p>
               <p style="text-align:center">
                 <a href="mailto:xiangming@comp.nus.edu.sg">Email</a> &nbsp/&nbsp
@@ -51,7 +51,7 @@
 
           <ul>
             <li>
-              <strong>[2022.09]</strong>: One paper got accepted to Conference on Neural Information Processing Systems (<i>NeurIPS</i>) 2022!
+              <strong>[2022.09]</strong>: One paper got accepted to Advances in Neural Information Processing Systems (<i>NeurIPS</i>) 2022!
           </li>
             <li>
               <strong>[2022.07]</strong>: One paper got accepted to International Society for Music Information Retrieval Conference (<i>ISMIR</i>) 2022!
@@ -103,14 +103,14 @@
               <br>
               <em>Preprint</em>, 2022.
               <br>
-              <a href="pdf/Arxiv2022.pdf">paper</a> /
+              <a href="pdf/Arxiv2022.pdf">pdf</a> /
             <a href="data/wei2022unsupervised.bib">bibtex</a>		
               <p></p>
               <p>We developed an unsupervised learning algorithm that can infer the relationship between content-mismatched cross-modal sequential data, especially for speech-text sequences.</p>
             </td>
           </tr>
         </tbody></table>
-
+        <HR>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
@@ -147,7 +147,7 @@
                 <a href="https://scholar.google.com.sg/citations?hl=zh-CN&user=6xFZDEcAAAAJ">Hongfu Liu</a>,
                 <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
                 <br>
-                Conference on Neural Information Processing Systems (<em>NeurIPS</em>), 2022.
+                Advances in Neural Information Processing Systems (<em>NeurIPS</em>), 2022.
                 <br>
                 pdf /
                 bibtex /
@@ -298,7 +298,7 @@
                   <br>
                   <em>Technical Report</em>, 2020.
                   <br>
-                  <a href="pdf/Arxiv2020.pdf">paper</a> /
+                  <a href="pdf/Arxiv2020.pdf">pdf</a> /
                   <a href="data/gu2020distilling.bib">bibtex</a>		
                   <p></p>
                   <p>We distilled knowledge from deep learning models into explainable TSK-type Fussy Inference systems.</p>
