--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
                 <a href="https://arxiv.org/pdf/2207.09747.pdf">
-                  <papertitle>Towards Transfer Learning of wav2vec 2.0 for Automatic Lyric Transcription</papertitle>
+                  <papertitle>Transfer Learning of wav2vec 2.0 for Automatic Lyric Transcription</papertitle>
                 </a>
                 <br>
                 <a href="https://www.linkedin.com/in/longshen-ou/">Longshen Ou</a>*,
@@ -199,7 +199,7 @@
                 <a href="pdf/ACMMM2022.pdf">pdf</a> /
                 <a href="data/gu2022mm.bib">bibtex</a> /
                 <a href="https://n20em.github.io">project page</a> /
-                <a href="https://github.com/guxm2021/ALT_SpeechBrain">code</a>
+                <a href="https://github.com/guxm2021/MM_ALT">code</a>
                 <p></p>
                 <p>We proposed a MultiModal Automatic Lyric Transcription System accepting audio, video and IMU modalities and also curated the N20EM dataset.</p>
               </td>
