--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <a href="pdf/Resume.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=BkxEuIoAAAAJ&hl=zh-CN">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/xiangming-gu/">Linkedin</a> &nbsp/&nbsp
+                <a href="https://twitter.com/gu_xiangming">Twitter</a> &nbsp/&nbsp
                 <a href="https://github.com/guxm2021">Github</a>
               </p>
             </td>
