--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 
           <ul>
             <li>
+              <strong>[2022.10]</strong>: Our paper MM-ALT was selected as the top 13 rated paper in (<i>ACM MM</i>) 2022!
+          </li>
+            <li>
               <strong>[2022.09]</strong>: One paper got accepted to Advances in Neural Information Processing Systems (<i>NeurIPS</i>) 2022!
           </li>
             <li>
@@ -195,7 +198,7 @@
                 <a href="https://www.linkedin.com/in/danielle-ong-854b88177/">Danielle Ong</a>,
                 <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
                 <br>
-                ACM International Conference on Multimedia (<em>ACM MM</em>), 2022. (<font color="red"><i>Oral</i></font>)
+                ACM International Conference on Multimedia (<em>ACM MM</em>), 2022. (<font color="red"><i>Oral, Top 13 papers</i></font>)
                 <br>
                 <a href="pdf/ACMMM2022.pdf">pdf</a> /
                 <a href="data/gu2022mm.bib">bibtex</a> /
