--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               <img src="images/acmmm2022.png" width="160" height="160">
             </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://arxiv.org/pdf/2207.06127.pdf">
+                <a href="https://dl.acm.org/doi/10.1145/3503161.3548411">
                   <papertitle>MM-ALT: A Multimodal Automatic Lyric Transcription System</papertitle>
                 </a>
                 <br>
