--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
           <ul>
             <li>
-              <strong>[2022.10]</strong>: Our paper MM-ALT was selected as the top 13 rated paper in (<i>ACM MM</i>) 2022!
+              <strong>[2022.10]</strong>: Our paper <a href="https://dl.acm.org/doi/10.1145/3503161.3548411">MM-ALT</a> was selected as the top 13 rated paper in (<i>ACM MM</i>) 2022!
           </li>
             <li>
               <strong>[2022.09]</strong>: One paper got accepted to Advances in Neural Information Processing Systems (<i>NeurIPS</i>) 2022!
