--- a/index.html
+++ b/index.html
@@ -60,9 +60,6 @@
             <li>
               <strong>[2022.07]</strong>: One paper got accepted to International Society for Music Information Retrieval Conference (<i>ISMIR</i>) 2022!
           </li>
-            <!-- <li>
-              <strong>[2022.07]</strong>: <i>NUS Sound and Music Computing Lab</i> has survived from a server attack and has a <a href="https://smcnus.github.io">brand new lab website</a> now!
-          </li> -->
             <li>
                 <strong>[2022.06]</strong>: One paper got accepted to ACM International Conference on Multimedia (<i>ACM MM</i>) 2022!
             </li>
@@ -142,7 +139,9 @@
               <img src="images/neurips2022.png" width="160" height="137">
             </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="pdf/NeurIPS2022.pdf">
                   <papertitle>Extrapolative Continuous-time Bayesian Neural Network for Fast Training-free Test-time Adaptation</papertitle>
+                </a>
                 <br>
                 <a href="https://scholar.google.com/citations?user=GQm1eZEAAAAJ&hl=zh-CN">Hengguan Huang</a>,
                 <strong>Xiangming Gu</strong>,
@@ -153,9 +152,10 @@
                 <br>
                 Advances in Neural Information Processing Systems (<em>NeurIPS</em>), 2022.
                 <br>
-                pdf /
+                <a href="pdf/NeurIPS2022.pdf">pdf</a> /
                 bibtex /
-                code
+                <a href="https://github.com/guxm2021/ECBNN">code /
+                <a href="https://recorder-v3.slideslive.com/?share=76177&s=cd597422-3109-42f3-9072-dfef5c351a4d">video</a>
                 <p></p>
                 <p>We proposed to formulate predictive modeling as a continuous-time Bayesian filtering problem and extrapolative continuous-time Bayesian neural networks (ECBNN).</p>
               </td>
@@ -198,12 +198,13 @@
                 <a href="https://www.linkedin.com/in/danielle-ong-854b88177/">Danielle Ong</a>,
                 <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
                 <br>
-                ACM International Conference on Multimedia (<em>ACM MM</em>), 2022. (<font color="red"><i>Oral, Top 13 papers</i></font>)
+                ACM International Conference on Multimedia (<em>ACM MM</em>), 2022. (<font color="red"><i>Oral, top 13 papers</i></font>)
                 <br>
                 <a href="pdf/ACMMM2022.pdf">pdf</a> /
                 <a href="data/gu2022mm.bib">bibtex</a> /
                 <a href="https://n20em.github.io">project page</a> /
-                <a href="https://github.com/guxm2021/MM_ALT">code</a>
+                <a href="https://github.com/guxm2021/MM_ALT">code</a> /
+                <a href="https://youtu.be/3eA62RYROq0">video</a>
                 <p></p>
                 <p>We proposed a MultiModal Automatic Lyric Transcription System accepting audio, video and IMU modalities and also curated the N20EM dataset.</p>
               </td>
@@ -344,7 +345,7 @@
               <p style="text-align:right;font-size:small;">
                 You've probably seen this website template before, thanks to <a href="https://jonbarron.info">Jon Barron</a>.
                 <br>
-                Last Updated September 2022.
+                Last Updated October 2022.
               </p>
             </td>
           </tr>
