--- a/index.html
+++ b/index.html
@@ -20,13 +20,10 @@
               <p style="text-align:center">
                 <name>Xiangming Gu</name>
               </p>
-              <p>I am a second-year Ph.D. student from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Wang Ye</a>. I am affilated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>.
+              <p>I am currently a second-year Ph.D. student from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Wang Ye</a>. I am affilated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>. Before that, I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>.
               </p>
               <p>
-                I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>. My undergraduate thesis was supervised by Prof. <a href="http://jschenthu.weebly.com">Jiansheng Chen</a> and the topic was about techniques and applications of 3D Human Pose Estimation in Heathcare.
-              </p>
-              <p>
-                My research interests include Machine Learning, mainly on unsupervised learning and transfer learning; Computer Vision, mainly on 3D Human Pose Estimation; Music Information Retrieval, etc.
+                My research interests include Machine Learning, mainly on unsupervised learning and transfer learning; 3D Vision; Music Information Retrieval, etc.
               </p>
               <p style="text-align:center">
                 <a href="mailto:xiangming@comp.nus.edu.sg">Email</a> &nbsp/&nbsp
@@ -328,9 +325,9 @@
               <img src="images/nus_logo.jpg" alt="nus">
             </td> -->
             <td width="100%" valign="center">
-              Teaching Assistant, <a href="https://github.com/xbresson/CS4243_2022">CS4243, Computer Vision and Pattern Recognition, Spring 2022</a>
-              <br>
               Teaching Assistant, <a href="https://knmnyn.github.io/cs3244-2210">CS3244, Machine Learning, Fall 2022</a>
+              <br>
+              Teaching Assistant, <a href="https://github.com/xbresson/CS4243_2022">CS4243, Computer Vision and Pattern Recognition, Spring 2022</a>
               <br>
             </td>
           </tr>
