--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           <ul>
             <li>
-              <strong>[2022.10]</strong>: Our paper <a href="https://dl.acm.org/doi/10.1145/3503161.3548411">MM-ALT</a> was selected as the top 13 rated paper in (<i>ACM MM</i>) 2022!
+              <strong>[2022.11]</strong>: Our paper <a href="https://dl.acm.org/doi/10.1145/3503161.3548411">MM-ALT</a> won the <strong>Top Paper Award</strong> at <i>ACM MM</i> 2022!
           </li>
             <li>
               <strong>[2022.09]</strong>: One paper got accepted to Advances in Neural Information Processing Systems (<i>NeurIPS</i>) 2022!
@@ -195,7 +195,7 @@
                 <a href="https://www.linkedin.com/in/danielle-ong-854b88177/">Danielle Ong</a>,
                 <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
                 <br>
-                ACM International Conference on Multimedia (<em>ACM MM</em>), 2022. (<font color="red"><i>Oral, top 13 papers</i></font>)
+                ACM International Conference on Multimedia (<em>ACM MM</em>), 2022. (<font color="red"><i>Oral, Top Paper Award</i></font>)
                 <br>
                 <a href="pdf/ACMMM2022.pdf">pdf</a> /
                 <a href="data/gu2022mm.bib">bibtex</a> /
@@ -343,7 +343,7 @@
               <p style="text-align:right;font-size:small;">
                 You've probably seen this website template before, thanks to <a href="https://jonbarron.info">Jon Barron</a>.
                 <br>
-                Last Updated October 2022.
+                Last Updated November 2022.
               </p>
             </td>
           </tr>
