--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
                 ACM International Conference on Multimedia (<em>ACM MM</em>), 2022. (<font color="red"><i>Oral, Top Paper Award</i></font>)
                 <br>
                 <a href="pdf/ACMMM2022.pdf">pdf</a> /
+                <a href="pdf/ACMMM2022_Appendix.pdf">appendix</a> /
                 <a href="data/gu2022mm.bib">bibtex</a> /
                 <a href="https://n20em.github.io">project page</a> /
                 <a href="https://github.com/guxm2021/MM_ALT">code</a> /
