--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <img src="images/neurips2022.png" width="160" height="137">
             </td> -->
               <td style="padding:20px;width:100%;vertical-align:middle">
-                <a href="pdf/NeurIPS2022.pdf">
+                <a href="https://openreview.net/pdf?id=wiHzQWwg3l">
                   <papertitle>Extrapolative Continuous-time Bayesian Neural Network for Fast Training-free Test-time Adaptation</papertitle>
                 </a>
                 <br>
@@ -150,7 +150,7 @@
                 Advances in Neural Information Processing Systems (<em>NeurIPS</em>), 2022.
                 <br>
                 <a href="pdf/NeurIPS2022.pdf">pdf</a> /
-                bibtex /
+                <a href="data/huang2022.bib">bibtex</a> /
                 <a href="https://github.com/guxm2021/ECBNN">code /
                 <a href="https://recorder-v3.slideslive.com/?share=76177&s=cd597422-3109-42f3-9072-dfef5c351a4d">video</a>
                 <p></p>
