--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Xiangming Gu</name>
               </p>
-              <p>I am currently a second-year Ph.D. student from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Wang Ye</a>. I am affilated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>. Before that, I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>.
+              <p>I am a second-year Ph.D. candidate from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Wang Ye</a>. I am affilated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>. Before that, I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021.
               </p>
               <p>
                 My research interests include Machine Learning, mainly on unsupervised learning and transfer learning; 3D Vision; Music Information Retrieval, etc.
@@ -48,8 +48,14 @@
             <heading>News</heading>
 
           <ul>
-            <li>
-              <strong>[2022.11]</strong>: Our paper <a href="https://dl.acm.org/doi/10.1145/3503161.3548411">MM-ALT</a> won the <strong>Top Paper Award</strong> at <i>ACM MM</i> 2022!
+          <li>
+              <strong>[2022.12]</strong>: I passed my Ph.D. Qualifying Examination (PQE) and became a Ph.D. candidate!
+          </li>
+          <li>
+            <strong>[2022.11]</strong>: I physically attended NeurIPS'2022 in New Orleans, United States!
+          </li>
+          <li>
+            <strong>[2022.10]</strong>: I physically attended MM'2022 in Lisbon, Portugal, where our paper <a href="https://dl.acm.org/doi/10.1145/3503161.3548411">MM-ALT</a> won the <strong>Top Paper Award</strong>!
           </li>
             <li>
               <strong>[2022.09]</strong>: One paper got accepted to Advances in Neural Information Processing Systems (<i>NeurIPS</i>) 2022!
@@ -63,9 +69,6 @@
             <li>
               <strong>[2022.05]</strong>: One paper got accepted to IEEE Transactions on Image Processing (<i>TIP</i>), 2022!
           </li>
-          <li>
-            <strong>[2021.08]</strong>: I started my Ph.D. Journey at National University of Singapore!
-        </li>
           </ul>
           </td>
 
@@ -344,7 +347,7 @@
               <p style="text-align:right;font-size:small;">
                 You've probably seen this website template before, thanks to <a href="https://jonbarron.info">Jon Barron</a>.
                 <br>
-                Last Updated November 2022.
+                Last Updated December 2022.
               </p>
             </td>
           </tr>
